--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,18 @@ flask = "^2.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
-flake8 = "^6.0.0"
 pytest = "^7.2.0"
 bandit = "^1.7.4"
+flake8-pyproject = "^1.2.2"
+toml = "^0.10.2"
+
+[tool.bandit]
+exclude_dirs = [".venv","tests"]
+skips = ["B104"]
+
+[tool.flake8]
+ignore = ["F401","E402"]
+exclude = [".venv"]
 
 [build-system]
 requires = ["poetry-core"]
