--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 flask = "^2.2.2"
-
+gunicorn = "^20.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
